# therminal

./: .gitignore  .mcp.json  .vibecheckrc  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  RESEARCH.md
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: settings.local.json
audits/: 2026-04-05-app-core-audit.md  2026-04-05-daemon-runtime-top3.md  2026-04-05-therminal-audit.md
crates/therminal-app/: CLAUDE.md  Cargo.toml  build.rs
crates/therminal-app/src/: claude_cwd.rs  clipboard.rs  color_mapping.rs  daemon_spawn.rs  git_state.rs  grid_renderer.rs  hotspot_detection.rs  image_renderer.rs  main.rs  mcp_stdio.rs  menu.rs  model_context.rs  overlay.rs  pane.rs  system_metrics.rs  url_detection.rs  window.rs
crates/therminal-app/src/cli/: agent_event.rs  agents.rs  bookmarks.rs  events.rs  format.rs  layout.rs  mod.rs  pane.rs  runtime.rs  semantic.rs  session.rs  workspace.rs
crates/therminal-app/src/pane/: auto_tile.rs  backend.rs  geometry.rs  jsonl_tail.rs  layout.rs  mod.rs  remote_spawn.rs  spawn.rs  state.rs  swarm_watcher.rs  webview.rs  workspace.rs
crates/therminal-app/src/pane/layout/: mod.rs  snapshot.rs  tree.rs
crates/therminal-app/src/widgets/: agent_timeline.rs  badge.rs  gpu.rs  mod.rs  pattern_widget.rs  rasterizer.rs
crates/therminal-app/src/window/: chrome.rs  event_handler.rs  focus_hint.rs  folder_open.rs  git_ref_open.rs  help_overlay.rs  init.rs  keybindings.rs  launcher_overlay.rs  mod.rs  mouse.rs  pane_ops.rs  reconcile.rs  render.rs  render_driver.rs  render_tests.rs  settings_overlay.rs  toast.rs  trust_escalation_overlay.rs  wsl_paths.rs
crates/therminal-app/src/window/chrome/: colors.rs  csd.rs  delegate_summary.rs  mod.rs  overlays.rs  pane_header.rs  render_pass.rs  status_bar.rs  tab_bar.rs  text_cache.rs
crates/therminal-app/src/window/event_handler/: mod.rs  pty_input.rs  scroll.rs  settings.rs
crates/therminal-app/src/window/pane_ops/: close_ops.rs  editor_clipboard.rs  focus_and_nav.rs  mod.rs  split_ops.rs  workspace_ops.rs
crates/therminal-app/src/window/pane_ops/editor_clipboard/: clipboard.rs  editor.rs  mod.rs  planner.rs
crates/therminal-app/src/window/pane_ops/split_ops/: local.rs  mod.rs  remote.rs  remote_helpers.rs
crates/therminal-app/src/window/pane_ops/workspace_ops/: auto_tile.rs  mod.rs  restore.rs  swarm.rs  switch.rs
crates/therminal-app/src/window/settings_overlay/: mod.rs  nav.rs  sections.rs  state.rs  tests.rs  theme.rs  types.rs
crates/therminal-app/src/window/settings_overlay/renderer/: layout.rs  mod.rs  rects.rs  text.rs
crates/therminal-core/: CLAUDE.md  Cargo.toml
crates/therminal-core/src/: config.rs  config_watcher.rs  font.rs  geometry.rs  lib.rs  palette.rs  text.rs  wgpu_ctx.rs
crates/therminal-core/src/config/: config_text.rs  keybindings.rs  mod.rs  profiles.rs
crates/therminal-daemon/: CLAUDE.md  Cargo.toml  build.rs
crates/therminal-daemon-client/: Cargo.toml
crates/therminal-daemon-client/src/: client.rs  framing.rs  ipc_transport.rs  lib.rs
crates/therminal-daemon/src/: agent_events.rs  claude_jsonl_tailer.rs  claude_pipeline.rs  claude_state.rs  client.rs  control.rs  ensure.rs  event_bus.rs  fd_passing.rs  handoff.rs  ipc_transport.rs  lib.rs  lifecycle.rs  main.rs  mcp.rs  pane_capacity.rs  pattern_dispatch.rs  persistence.rs  process_detector_task.rs  server.rs  session.rs  trust.rs
crates/therminal-daemon/src/mcp/: deser_compat.rs  dispatch.rs  helpers.rs  mod.rs  resources.rs  tests.rs  tools.rs  transport.rs  types.rs
crates/therminal-daemon/src/session/: base.rs  layout.rs  manager.rs  mod.rs  pane.rs  snapshots.rs  window.rs  workspace_ops.rs  worktree.rs
crates/therminal-daemon/src/session/manager/: crud.rs  kill.rs  mod.rs  split.rs
crates/therminal-daemon/src/session/pane/: accessors.rs  dispatch_ctx.rs  fd_master.rs  headless.rs  lifecycle.rs  mod.rs
crates/therminal-daemon/tests/: daemon_lifecycle.rs  ipc_roundtrip.rs  session_pty.rs
crates/therminal-harness-claude/: CLAUDE.md  Cargo.toml
crates/therminal-harness-claude/src/: agent_events.rs  hook_push.rs  jsonl_tailer.rs  lib.rs  markers.rs  pipeline.rs  session_log.rs  state.rs  tool_call_hotspots.rs  wsl_paths.rs
crates/therminal-harness-claude/tests/: osc_marker_integration.rs
crates/therminal-integration-tests/: Cargo.toml
crates/therminal-integration-tests/src/: harness.rs  lib.rs
crates/therminal-integration-tests/tests/: scenarios.rs
crates/therminal-protocol/: CLAUDE.md  Cargo.toml
crates/therminal-protocol/src/: bus_types.rs  config.rs  daemon.rs  ggl_types.rs  lib.rs  message.rs  pane.rs  state.rs
crates/therminal-runtime/: CLAUDE.md  Cargo.toml
crates/therminal-runtime/src/: lib.rs  paths.rs  wsl.rs
crates/therminal-terminal/: CLAUDE.md  Cargo.toml
crates/therminal-terminal/src/: agent_registry.rs  event_log.rs  hotspot_detection.rs  input.rs  interceptor.rs  lib.rs  osc633.rs  osc_registry.rs  process_detector.rs  pty.rs  pty_runtime.rs  region_index.rs  state_inference.rs  terminal.rs
crates/therminal-terminal/src/graphics/: chunk_buffer.rs  mod.rs  placements.rs  store.rs
crates/therminal-terminal/src/process_detector/: classifier.rs  mod.rs  wsl_probe.rs
crates/therminal-terminal/src/semantic_patterns/: engine.rs  loader.rs  mod.rs  schema.rs  tests.rs  types.rs
crates/therminal-terminal/src/state_inference/: ansi_strip.rs  cadence.rs  matchers.rs  mod.rs  patterns.rs  persistence.rs  state_machine.rs  types.rs
crates/therminal-terminal/tests/: shell_integration.rs
crates/therminal-tui/: CLAUDE.md  Cargo.toml
crates/therminal-tui/src/: app.rs  backend.rs  main.rs  palette.rs
crates/therminal-tui/src/pages/: agents.rs  mod.rs  panes.rs  sessions.rs
docs/: cli.md  control-mode.md  event-bus-kinds.md  event-bus-spec.md  flag-audit-2026-04.md  ideas.md  osc-7777-spec.md  osc-code-registry.md  osc-handler-registry.md  pattern-matching-spec.md  pattern-packs-authoring.md  pattern-performance-model.md
memory/: ref_pocketforge.md
plugins/: CLAUDE.md  README.md
scripts/: build-linux.sh  ci.sh  (+7 more)
(+46 files in other folders)
