[workspace]
resolver = "3"
members = [
    "crates/therminal-protocol",
    "crates/therminal-terminal",
    "crates/therminal-core",
    "crates/therminal-runtime",
    "crates/therminal-daemon",
    "crates/therminal-app",
]
exclude = ["vendor"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/GGPrompts/therminal"

[workspace.dependencies]
# Workspace crates
therminal-protocol = { path = "crates/therminal-protocol" }
therminal-terminal = { path = "crates/therminal-terminal" }
therminal-core = { path = "crates/therminal-core" }
therminal-runtime = { path = "crates/therminal-runtime" }
therminal-daemon = { path = "crates/therminal-daemon" }
therminal-app = { path = "crates/therminal-app" }

# GPU Rendering
wgpu = "28"
glyphon = "0.10"
cosmic-text = "0.15"

# Windowing
winit = "0.30"

# Terminal
alacritty_terminal = "0.25"
vte = "0.15"
portable-pty = "0.9"

# IPC
interprocess = "2"

# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rmp-serde = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Text processing
regex = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Clipboard
arboard = { version = "3", features = ["wayland-data-control"] }
base64 = "0.22"

# Process inspection
sysinfo = { version = "0.38", default-features = false, features = ["system", "multithread"] }

# Config
toml = "1.1"
notify = { version = "8", default-features = false, features = ["macos_fsevent"] }

# MCP
rmcp = { version = "1", features = ["server", "transport-io", "transport-async-rw"] }
schemars = "1"

# Notifications
notify-rust = "4"

# Misc
open = "5"
bytemuck = { version = "1", features = ["derive"] }
raw-window-handle = "0.6"
pollster = "0.4"
tempfile = "3"
dirs = "6"
libc = "0.2"
time = { version = "0.3", features = ["formatting", "parsing", "macros"] }

[patch.crates-io]
alacritty_terminal = { path = "vendor/alacritty_terminal" }
vte = { path = "vendor/vte" }
portable-pty = { path = "vendor/portable-pty" }
