[package]
name = "therminal-app"
description = "Window, grid renderer, overlays, and tiling for Therminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "therminal"
path = "src/main.rs"

[dependencies]
therminal-protocol = { workspace = true }
therminal-terminal = { workspace = true }
therminal-core = { workspace = true }
therminal-runtime = { workspace = true }
therminal-daemon-client = { workspace = true }
therminal-harness-claude = { workspace = true }
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
winit = { workspace = true }
wgpu = { workspace = true }
pollster = { workspace = true }
glyphon = { workspace = true }
bytemuck = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
arboard = { workspace = true }
base64 = { workspace = true }
regex = { workspace = true }
open = { workspace = true }
notify = { workspace = true }
notify-rust = { workspace = true }
sysinfo = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tiny-skia = { workspace = true }
wry = { workspace = true }
dirs = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(windows)'.dependencies]
# tn-shgq: Win32 SetFocus/GetFocus to move keyboard focus from a wry
# WebView2 child HWND back to our main HWND. winit's focus_window() uses
# SetForegroundWindow, which doesn't change child-HWND keyboard focus.
windows-sys = { version = "0.59.0", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse"] }

[target.'cfg(windows)'.build-dependencies]
winresource = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
