[package]
name = "therminal-core"
description = "Color palette, wgpu context, and text renderer for Therminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
therminal-protocol = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
