[package]
name = "therminal-core"
description = "Color palette, wgpu context, and text renderer for Therminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
therminal-protocol = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
glyphon = { workspace = true }
cosmic-text = { workspace = true }
pollster = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
