[package]
name = "therminal-daemon-client"
description = "Lightweight IPC client for the Therminal daemon (no server, no MCP, no persistence)"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
therminal-protocol = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
