[package]
name = "therminal-daemon"
description = "Session manager, event bus, multiplexer, and MCP server for Therminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "therminal-daemon"
path = "src/main.rs"

[dependencies]
therminal-protocol = { workspace = true }
therminal-daemon-client = { workspace = true }
therminal-terminal = { workspace = true }
therminal-runtime = { workspace = true }
therminal-harness-claude = { workspace = true }
therminal-core = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
rmp-serde = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alacritty_terminal = { workspace = true }
portable-pty = { workspace = true }
regex = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
notify = { workspace = true }
time = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
