[package]
name = "therminal-protocol"
description = "Wire types, MCP schema, and semantic events for Therminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
thiserror = { workspace = true }
