[package]
name = "therminal-tui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Ratatui TUI dashboard for therminal — connects to the daemon via IPC"

[[bin]]
name = "therminal-tui"
path = "src/main.rs"

[dependencies]
# Workspace crates
therminal-protocol = { workspace = true }
therminal-daemon-client = { workspace = true }
therminal-runtime = { workspace = true }

# TUI
ratatui = "0.29"
crossterm = "0.28"

# Async runtime (for IPC client)
tokio = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# CLI
clap = { workspace = true }
